--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,17 @@
 
   <head>
     <meta charset="utf-8">
-    <title>WeatherNow</title>
-    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#ffffff">
+    <title>Weather Now</title>
+    <base href="/">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff8800">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   </head>
 
   <body>
